@@ -1,3 +1,13 @@
+Mon Apr 13 22:44:07 2015  Tanaka Akira  <akr@fsij.org>
+
+	* test/lib/envutil.rb (File.mkfifo): Defined using mkfifo command.
+
+	* test/ruby/test_io.rb: Ditto.
+
+	* test/ruby/test_file_exhaustive.rb: Use File.mkfifo.
+
+	* test/ruby/test_process.rb: Ditto.
+
 Mon Apr 13 21:20:20 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
 
 	* ext/openssl/lib/openssl/ssl.rb: stricter hostname verification
